# Jarvis_v2

./: .env  .env.example  .gitignore  all_code.txt  pyproject.toml  test.py  test_parser.py
src/jarvis/: __main__.py  app.py
src/jarvis/builders/: prompt_builder.py
src/jarvis/commands/: router.py
src/jarvis/config/: settings.py
src/jarvis/core/: logging.py
src/jarvis/documents/: chunker.py  indexer.py  parser.py  retriever.py  service.py
src/jarvis/llm/: base.py  factory.py  groq_provider.py
src/jarvis/memory/: chroma_client.py  conversation.py  repository.py  semantic_memory.py
src/jarvis/planner/: planner.py
src/jarvis/services/: chat_service.py  embedding_service.py  search_result_formatter.py
src/jarvis/tools/: base.py  calculator_tool.py  registry.py  time_tool.py  web_search_tool.py  youtube_index_tool.py
src/jarvis/youtube_rag/: embedding.py  loader.py  retriever.py  service.py  splitter.py  vector_store.py
src/jarvis/youtube_rag/tests/: test_loader.py
