[project]
name = "jarvis-v2"
version = "0.1.0"
description = "A modular AI assistant built to learn professional software engineering and AI engineering."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "groq>=1.5.0",
    "pydantic-settings>=2.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]
