[project]
name = "jarvis-v2"
version = "0.1.0"
description = "A modular AI assistant built to learn professional software engineering and AI engineering."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "groq>=1.5.0",
    "langchain>=1.3.14",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "pytube>=15.0.0",
    "sentence-transformers>=5.6.0",
    "tavily-python>=0.7.26",
    "youtube-transcript-api>=1.2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]
